--- a/index.html
+++ b/index.html
@@ -2,10 +2,27 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <title>记账助手</title>
+    <!-- iconfont 图标库 -->
+    <!-- 请按照以下步骤配置 iconfont：
+         1. 访问 https://www.iconfont.cn/collections/detail?cid=53168
+         2. 登录后，将图标添加到项目
+         3. 在项目中选择 Symbol 方式
+         4. 复制生成的 JS 链接替换下面的 src 属性
+    -->
+    <script src="//at.alicdn.com/t/c/font_5113528_9tij4ap9tmn.js"></script>
+    <style>
+      .icon {
+        width: 1em;
+        height: 1em;
+        vertical-align: -0.15em;
+        fill: currentColor;
+        overflow: hidden;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
