--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
          3. 在项目中选择 Symbol 方式
          4. 复制生成的 JS 链接替换下面的 src 属性
     -->
-    <script src="//at.alicdn.com/t/c/font_5113528_9tij4ap9tmn.js"></script>
+    <script src="//at.alicdn.com/t/c/xxx.js"></script>
     <style>
       .icon {
         width: 1em;
